# postech

apps/automata/: .dockerignore  .gitignore  .pg_service.conf  Dockerfile  compose.yml  manage.py  pyproject.toml
apps/automata/attendance/: admin.py  models.py  tasks.py
apps/automata/attendance/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ble_session_alter_room_session_and_more.py  0004_lecture_code.py  0005_alter_session_options.py  0006_remove_ble_session_session_ble.py  0007_alter_log_session_alter_log_user.py  0008_alter_session_unique_together.py
apps/automata/automata/: asgi.py  celery.py  production_settings.py  settings.py  urls.py  wsgi.py
apps/automata/dining/: tasks.py
apps/automata/identity/: models.py
apps/automata/identity/migrations/: 0001_initial.py
