[tool.poetry]
name = "automata"
version = "0.1.0"
description = ""
authors = ["Minjae Gwon <beta.underalpha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-celery-beat = "^2.7.0"
pyattendance = { path = "../../packages/pyattendance", develop = true }
celery = { extras = ["redis"], version = "^5.4.0" }
uvicorn = "^0.32.0"
pydining = { path = "../../packages/pydining", develop = true }
psycopg2-binary = "^2.9.10"
whitenoise = "^6.8.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pyright = "^1.1.387"
celery-types = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
